src/app/components/login/login.scss
* {
  box-sizing: border-box;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 100vw;
  height: 100vh;
  padding: 1rem;

  .login-form {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: center;
    justify-content: center;

    width: 100%;
    max-width: 400px;
    height: 40svh;
    padding: 1rem;
    border: 1px solid black;
    border-radius: 10px;

    .email-input,
    .password-input {
      position: relative;
      width: 100%;
      max-width: 350px;

      .email,
      .password {
        width: 100%;
        height: 1.5rem;
        margin-top: 5px;
        padding: 15px 0;
        border: 1px solid #999;
        border-radius: 5px;

        font-size: 16px;
        line-height: 40px;
        text-indent: 10px;

        &.password {
          padding-right: 35px;
        }
      }

      .password-control {
        position: absolute;
        top: 11px;
        right: 6px;

        display: inline-block;

        width: 20px;
        height: 20px;
      }

      .tooltip {
        position: absolute;
        z-index: 10;
        top: 110%;
        left: 0;

        padding: 6px 10px;
        border: 1px solid #ccc;
        border-radius: 4px;

        font-size: 12px;
        white-space: wrap;

        background-color: #fefefe;
        box-shadow: 0 0 6px rgb(0 0 0 / 20%);

        transition: opacity 0.2s ease;

        .error-message {
          color: red;
        }
      }
    }
  }
}

